More cleanup in bashrc: Move variables to setup-vars.sh